--- a/index.css
+++ b/index.css
@@ -1,11 +1,7 @@
 fieldset {
-  width: 700px;
+  width: 750px;
   height: auto;
   line-height: 24px
-}
-form {
-  width: 700px;
-  height: auto;
 }
 ul {
   list-style-type: none;
@@ -17,13 +13,36 @@ li{
 button {
   font-weight: bold;
   font-size: 24px;
+  color: black;
   width: 200px;
   height: 50px;
-  border: none;
+  border: 1px inset orange;
   background-color: orange;
   float: right;
   margin: 10px;
+  transition-property: background;
+  transition-duration: 1s;
+  transition-timing-function: linear;
+}
+button:hover {
+  background: green;
+}
+button
+a:link {
+  text-decoration: none;
+}
+a:visited {
+  text-decoration: none;
+  color: black;
 }
 input {
   border: 1px solid black;
+  margin-right: 5px;
+}
+legend {
+  font: 3em 'Helvetica',sans-serif;
+  font-weight: 600;
+  color: #405d27;
+  text-align: center;
+  margin: 30px auto 10px auto;
 }
